# onbody

./: .gitignore  CMakeLists.txt  Makefile  README.md  onbody.cpp  ongrav3d.cpp  onvort2d.cpp
doc/: oldREADME.md  resNqd_t0p9.eps
scripts/: speedtest.pl
src/: BarycentricLagrange.hpp  CoreFunc2d.h  CoreFunc2d.hpp  CoreFunc3d.h  CoreFunc3d.hpp  LeastSquares.hpp  Makefile  MathHelper.hpp  Parts.h  Parts.hpp  Polynomial.cc  Polynomial.hh  Tree.h  Tree.hpp  barneshut.cpp  barneshut.h  barneshut.hpp  bhinterface.cpp  bhmain.cpp  interface2dvort.cpp  interface2dvorttr.cpp  interface3dvortgrads.cpp  main2dvort.cpp  main3dvortgrads.cpp  ongrav3d.cpp  onvort2d.cpp  onvort3d.cpp  onvortgrad3d.cpp  wlspoly.hpp
